--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "http-proxy": "^1.18.1",
     "next": "13.5.5",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
   "devDependencies": {
+    "@types/http-proxy": "^1.17.14",
     "@types/node": "^20.8.7",
     "@types/react": "18.2.28",
     "eslint": "8.51.0",
