--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "cookies": "^0.9.1",
     "http-proxy": "^1.18.1",
     "next": "13.5.5",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
   "devDependencies": {
+    "@types/cookies": "^0.7.10",
     "@types/http-proxy": "^1.17.14",
     "@types/node": "^20.8.7",
     "@types/react": "18.2.28",
