--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^1.6.7",
     "cookies": "^0.9.1",
     "http-proxy": "^1.18.1",
     "next": "13.5.5",
@@ -16,6 +17,7 @@
     "react-dom": "18.2.0"
   },
   "devDependencies": {
+    "@types/axios": "^0.14.0",
     "@types/cookies": "^0.7.10",
     "@types/http-proxy": "^1.17.14",
     "@types/node": "^20.8.7",
