--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "axios": "^1.6.7",
     "clsx": "^2.1.0",
     "cookies": "^0.9.1",
+    "date-fns": "^3.3.1",
     "http-proxy": "^1.18.1",
     "next": "13.5.5",
     "react": "18.2.0",
