--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "clsx": "^2.1.0",
     "cookies": "^0.9.1",
     "date-fns": "^3.3.1",
+    "gray-matter": "^4.0.3",
     "http-proxy": "^1.18.1",
     "next": "13.5.5",
     "react": "18.2.0",
